# Cardinal

./: .gitignore  .gitmodules  BUILDING.md  Makefile  Makefile.base.mk  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature.yaml
.github/workflows/: build.yml  irc.yml
.kdev4/: Cardinal.kdev4
doc/: BUILDING.md  DEBUGGING.md  DIFFERENCES.md  LICENSE-PERMISSIONS.md  LICENSES.md  MODDEVICES.md  OVERVIEW.md
docs/: .generate-plugin-licenses.sh  ADDING-MODULES.md  BUILDING.md  CARDINAL-MODULES.md  DEBUGGING.md  DIFFERENCES.md  FAQ.md  LICENSE-PERMISSIONS.md  LICENSES.md  OSC-REMOTE-CONTROL.md  OVERVIEW.md
include/: audio.hpp  common.hpp  componentlibrary.hpp  helpers.hpp  midi.hpp  mutex.hpp  plugincontext.hpp  rack.hpp  settings.hpp
include/GL/: gl.h  glew.h
include/OpenGL/: gl.h
include/app/: ModuleWidget.hpp  RackWidget.hpp
include/choc/: choc_SmallVector.h  choc_Span.h
include/dsp/: fir.hpp
include/engine/: Port.hpp  TerminalModule.hpp
include/haiku-compat/: execinfo.h
include/linux-compat/: execinfo.h
include/mingw-compat/: Shlobj.h  Shlwapi.h  condition_variable  cstdio  future  mutex  stdio.h  thread
include/neon-compat/: pmmintrin.h
include/osdialog-stub/: osdialog.h
include/plugin/: Model.hpp
include/simd/: Vector.hpp  common.hpp  functions.hpp
include/simd-compat/: emmintrin.h  immintrin.h  mmintrin.h  pmmintrin.h  simd-compat.h  smmintrin.h  tmmintrin.h  xmmintrin.h
include/single-precision/: algorithm
jucewrapper/: CMakeLists.txt  CardinalWrapper.cpp
lv2export/: Makefile  dep.cpp  dep2.cpp  export.cpp  lv2plugin.cpp  lv2plugin.hpp  lv2plugin.ttl  manifest.ttl  manifest.ttl.in  test.cpp
lv2export/includes/: rack.hpp
lv2export/lv2ttl/: chow-chorus.ttl
lv2export/plugins/: aubileinstruments-macro-osc-2.cpp  aubileinstruments-macro-osc.cpp  fundamental-quantizer.cpp  fundamental-seq3.cpp  msm-phaser.cpp  rackwindows-mv.cpp  rackwindows-vibrato.cpp  valleyaudio-plateau.cpp
patches/: Celebration.vcv  DRMR_-_Etherpad.vcv  DRMR_-_Gabberswing.vcv  falkTX_-_Salomonis-MonoRegen.vcv  welcome-wasm-mini.vcv  welcome-wasm.vcv
patches/examples/: DRMR_-_BassGrowl.vcv  DRMR_-_Etherpad.vcv  DRMR_-_Gabberswing.vcv  DRMR_-_Interverb.vcv  JTB_-_Waves.vcv  SpotlightKid_-_Classic-Polysynth.vcv  SpotlightKid_-_Cringe-Synth.vcv  VT_-_Jupiter_Ascent.vcv  falkTX_-_Divide-no-Conquer.vcv  falkTX_-_Mini-Arp-Seq.vcv  falkTX_-_Random-Progress-Pluck-Rev.vcv  falkTX_-_Salomonis-MonoRegen.vcv  nooneknowspeter_-_Algorithm.vcv  nooneknowspeter_-_Beep-Boop.vcv  nooneknowspeter_-_Between-The-Lines.vcv  nooneknowspeter_-_Catalyst.vcv  nooneknowspeter_-_Cloudy.vcv  nooneknowspeter_-_Contemplating.vcv  nooneknowspeter_-_Dreaming.vcv  nooneknowspeter_-_Epilogue.vcv  nooneknowspeter_-_Heavy.vcv  nooneknowspeter_-_Is-It-Worth-It.vcv  nooneknowspeter_-_Never-Know.vcv  nooneknowspeter_-_Somewhere-Above.vcv  nooneknowspeter_-_Sunflower.vcv  nooneknowspeter_-_Swing.vcv  nooneknowspeter_-_Terminal.vcv  nooneknowspeter_-_Velour.vcv  nooneknowspeter_-_Wasteland.vcv  nooneknowspeter_-_Xmas.vcv
patches/init/: fx.vcv  main.vcv  mini.vcv  synth.vcv  wasm.vcv
patches/mini/: JTB_-_Proof-Of-Concept.vcv  falkTX_-_Moogy.vcv  falkTX_-_Saw_For_One.vcv
patches/templates/: main.vcv  mini.vcv  native.vcv
patches/touchosc/: 24-direct-fader-params.tosc
plugins/: Core.json  Makefile  plugins-mini.cpp  plugins.cpp  res2c.py  todo.txt
plugins/Bidoo-workaround/: waves.cpp
plugins/BidooDark/: plugin.cpp
plugins/BogaudioModules-helper/: BogaudioModules-helper.cpp
plugins/CVCRack/: CVCRackPlugin.cpp  CVCRackUI.cpp  DistrhoPluginInfo.h  Makefile  Window.cpp  dep.cpp
plugins/CVfunk/: .gitignore  LICENSE  Makefile  README.md  plugin.json
plugins/Cardinal/: CardinalPlugin.cpp  CardinalUI.cpp  DistrhoPluginInfo.h  Makefile  ResizeHandle.hpp  Window.cpp  dep.cpp  plugin.json
plugins/Fundamental-workaround/: VCA.cpp
plugins/ImpromptuModularDark/: PanelTheme.cpp
plugins/ParableInstruments/: parasites  plugin.json
plugins/ZamAudio/: plugin.json
plugins/res/: 21kHz  AS  AmalgamatedHarmonics  AnimatedCircuits  AriaModules  Atelier  AudibleInstruments  Autinn  BaconPlugs  Befaco  Bidoo  BogaudioModules  Cardinal  ChowDSP  DrumKit  ESeries  ExpertSleepers-Encoders  Extratone  FehlerFabrik  Fundamental  GlueTheGiant  GrandeModular  HetrickCV  ImpromptuModular  JW-Modules  LifeFormModular  LittleUtils  LomasModules  LyraeModules  MindMeldModular  Mog  Prism  ValleyAudio  ZZC  ZetaCarinaeModules  cf  ihtsyn  mscHack  rackwindows  repelzen  (+1 more)
plugins/substation-settings/: Settings.cpp
plugins/surgext-helper/: surgext-helper.cpp
src/: AsyncDialog.cpp  AsyncDialog.hpp  CardinalCommon.cpp  CardinalCommon.hpp  CardinalModuleWidget.cpp  CardinalOSC.cpp  CardinalOSC.hpp  CardinalPlugin.cpp  CardinalPluginContext.hpp  CardinalRemote.cpp  CardinalRemote.hpp  CardinalUI.cpp  CardinalX11WindowIcon.cpp  DistrhoPluginInfo.h  Makefile  Makefile.cardinal.mk  PluginContext.hpp  PluginDriver.hpp  ResizeHandle.hpp  Window.cpp  WindowParameters.hpp  context.cpp  dep.cpp  template-fx.vcv  template-synth.vcv  template.vcv
src/Cardinal/: CardinalPlugin.cpp  DistrhoPluginInfo.h  Makefile  glfw.cpp
src/CardinalFX/: CardinalCommon.cpp  DistrhoPluginInfo.h  Makefile  RemoteNanoVG.cpp
src/CardinalLoader/: CardinalCommon.cpp  CardinalPlugin.cpp  CardinalRemote.cpp  DistrhoPluginInfo.h  Makefile  RemoteWindow.cpp
src/CardinalMini/: CardinalCommon-UI.cpp  CardinalOSC.cpp  DistrhoPluginInfo.h  Makefile  RemoteNanoVG.cpp
src/CardinalMiniSep/: CardinalUI.cpp  CardinalX11WindowIcon.cpp  DistrhoPluginInfo.h  Makefile
src/CardinalNative/: DistrhoPluginInfo.h  Makefile  MenuBar.cpp  common.cpp
src/CardinalRemote/: DistrhoPluginInfo.h  Makefile  RemoteUI.cpp  RemoteUI.hpp  Window.cpp  main.cpp
src/CardinalSynth/: DistrhoPluginInfo.h  Makefile  RemoteWindow.cpp
src/custom/: Browser.cpp  RemoteNanoVG.cpp  RemoteWindow.cpp  asset.cpp  dep.cpp  glfw.cpp  (+2 more)
utils/: create-macos-installer.sh  create-windows-installer.sh  distrho.icns  distrho.rc  package-osx-bundles.sh
(+158 files in other folders)
